--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Home</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Home</title>
+<link rel="stylesheet" href="static/styles.css"> <!-- Linking the external CSS file -->
 </head>
 <body>
+
+<div class="container">
+  <a href="{{ url_for('web') }}" class="button">WEB</a>
+  <a href="{{ url_for('document') }}" class="button">Documents</a>
+  <a href="{{ url_for('text') }}" class="button">Text</a>
+  <a href="{{ url_for('qa') }}" class="button">Q/A</a>
+</div>
+
 
 </body>
 </html>
